syntax = "proto3";
package customercontainer;
option go_package = "pb";

service CustomerContainerService {
    rpc CreateContainer (CreateContainerRequest) returns (CreateContainerResponse);
    rpc EditContainer (EditContainerRequest) returns (EditContainerResponse);
    rpc RemoveContainer (RemoveContainerRequest) returns (RemoveContainerResponse);
    rpc Instances (InstancesRequest) returns (InstancesResponse);
    rpc GetContainerID (GetContainerIDRequest) returns (GetContainerIDResponse);
}

message ContainerConfig {
    string ImageName = 1;
}

message CreateContainerRequest {
    uint32 RefID = 1;
    uint32 kmiID = 2;
}

message CreateContainerResponse {
    string Name = 1;
    string ID = 2;
    string Error = 3;
}

message EditContainerRequest {
    string ID = 1;
    ContainerConfig Cfg = 2;
}

message EditContainerResponse {
    string Error = 1;
}

message RemoveContainerRequest {
    string ID = 1;
}

message RemoveContainerResponse {
    string Error = 1;
}

message InstancesRequest {
    uint32 RefID = 1;
}

message InstancesResponse {
    repeated string Instances = 1;
}

message GetContainerIDRequest {
    uint32 RefID = 1;
    string ContainerName = 2;
}

message GetContainerIDResponse {
    string ContainerID = 1;
    string Error = 2;
}
